# Pixelator

./: CMakeLists.txt  Source.cpp  vcpkg.json
ImageExtracter/: CMakeLists.txt  ImageExtracter.ixx
cmake/: LoadPPL.cmake
